# reminderbot

./: .gitignore  jobs.sqlite  main.py  pyproject.toml  requirements.txt
