[tool.poetry]
name = "timerbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
apscheduler = "^3.6"
flask = "^1.1"
SQLAlchemy = "^1.3"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
